--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercthrift",
+  "name": "astro",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.ts",
@@ -10,14 +10,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^100.1.0",
     "expo": "~52.0.38",
+    "expo-blur": "~14.0.3",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwindcss": "^3.4.17",
+    "expo-router": "~4.0.19",
+    "react-native-screens": "~4.4.0",
+    "expo-linking": "~7.0.5",
+    "expo-constants": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
